--- a/templates/actor/parts/actor-skills.html
+++ b/templates/actor/parts/actor-skills.html
@@ -1,31 +1,23 @@
-<ol class="skills-list">
+<div class="skills-list">
     {{#each actor.skills as |skills skillcategory|}}
-        <div class="skill-category" data-skillcategory="{{skillcategory}}">
-            <li class="item flexrow item-header">
-                <div class="item-name">{{skillcategory}}</div>
-                <div class="item-name">
-                    <label  class="attribute-value"  type="text"  name="data.skillcategory.{{skillcategory}}.modifier"  value="{{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}"  data-dtype="Number">Modifier: {{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}</label>
-                </div>
-                <div class="item-controls">
-                    <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcategory}}"><i class="fas fa-plus"></i></a>
-                </div>
-            </li>
+        <table class="skill-category-table skillcategory" data-skillcategory="{{skillcategory}}">
+            <thead>
+                <tr>
+                    <th class="item-name" colspan=2>{{skillcategory}}</div>
+                    <th class="item-name">{{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}</th>
+                    <th class="item-name">
+                        <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcategory}}"><i class="fas fa-plus"></i></a>
+                    </th>
+
+                </tr>
+            </thead>
             {{#each skills as |item id|}}
-                <li class="item flexrow" data-item-id="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.skillcategory}}">
-                    <h4 class="item-name"><a class="skill-roll">{{item.name}}</a></h4>
-                    <!--
-                    <label class="skill-value">{{item.data.base}}</label>
-                    <label class="skill-value">{{item.data.increase}}</label>
-                    <label class="skill-value">{{item.data.modifier}}</label>
-                    -->
-                    <a class="skill-roll"><label class="skill-value">{{item.data.total}}</label></a>
-                    <input class="experiencecheck" type="checkbox" name="item.data.experience" {{checked item.data.experience}}/>
-                    <div class="item-controls">
-                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                    </div>                               
-                </li>
+                <tr class="skill" data-item-id="{{item._id}}" data-itemid="{{item._id}}">
+                    <td class="item" data-itemid="{{item._id}}" colspan=2><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">{{item.name}}</a></td>
+                    <td class="item" data-itemid="{{item._id}}"><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">{{item.data.total}}</a></td>
+                    <td class="item" data-itemid="{{item._id}}"><input class="experience" id="{{id}}_{{item._id}}_experience_skill" type="checkbox" name="item.data.experience" {{checked item.data.experience}}/></td>                         
+                </tr>
             {{/each}}
-        </div>
+        </table>
     {{/each}}
-</ol>
+</div>
