--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -1,81 +1,13 @@
 <form class="{{cssClass}}" autocomplete="off">
 
     {{!-- Sheet Header --}}
-    <header class="sheet-header">
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
-        <div class="header-fields">
-            <div class="summary-general-list">
-                <table class="general-list-table">
-                    <tbody>
-                        <tr>
-                        <td class="general-list-td" colspan="14">Name:<input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="strength" colspan="2">{{localize "RQG.STR"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="constitution" colspan="2">{{localize "RQG.CON"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="size" colspan="2">{{localize "RQG.SIZ"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="dexterity" colspan="2">{{localize "RQG.DEX"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="intelligence" colspan="2">{{localize "RQG.INT"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="power" colspan="2">{{localize "RQG.POW"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="charisma" colspan="2">{{localize "RQG.CHA"}}</td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="strength" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.strength.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="constitution" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.constitution.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="size" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.size.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="dexterity" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.dexterity.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="intelligence" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.intelligence.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="power" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.power.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="charisma" colspan="2"><a class="summary-characteristic-roll">{{actor.data.characteristics.charisma.value}}</a></td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td" colspan="4">Damage Bonus: {{actor.data.attributes.damagebonus}}</td>
-                            <td class="characteristic-list-td" colspan="3">SIZ SR: {{actor.data.attributes.sizsr}}</td>
-                            <td class="characteristic-list-td" colspan="3">DEX SR: {{actor.data.attributes.dexsr}}</td>
-                            <td class="characteristic-list-td" colspan="4">Healing Rate: {{actor.data.attributes.healingrate}}</td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td" colspan="7">
-                                <div>
-                                    {{localize 'RQG.HP'}}: <input class="resource-input" type="text" name="data.attributes.hitpoints.value" value="{{data.attributes.hitpoints.value}}" data-dtype="Number"/>
-                                    /
-                                    {{data.attributes.hitpoints.max}}
-                                </div>
-                            </td>                         
-                            <td class="characteristic-list-td" colspan="7">
-                                <div>
-                                    {{localize 'RQG.MP'}}: <input class="resource-input" type="text" name="data.attributes.magicpoints.value" value="{{data.attributes.magicpoints.value}}" data-dtype="Number"/>
-                                    /
-                                    {{data.attributes.magicpoints.max}}
-                                </div>
-                            </td>  
+    {{> "systems/runequest/templates/actor/parts/actor-sheetheader.html"}}
 
-                        </tr>                        
-                        <tr>
-                            <td class="characteristic-list-td" colspan="7">
-                                <div>
-                                    {{localize 'RQG.HP'}}: <input class="resource-input" type="text" name="data.attributes.hitpoints.value" value="{{data.attributes.hitpoints.value}}" data-dtype="Number"/>
-                                    /
-                                    {{data.attributes.hitpoints.max}}
-                                </div>
-                            </td>                         
-                            <td class="characteristic-list-td" colspan="7">
-                                <div>
-                                    {{localize 'RQG.MP'}}: <input class="resource-input" type="text" name="data.attributes.magicpoints.value" value="{{data.attributes.magicpoints.value}}" data-dtype="Number"/>
-                                    /
-                                    {{data.attributes.magicpoints.max}}
-                                </div>
-                            </td>  
-                        </tr>    
-                    </tbody>
-                </table>    
-            </div> 
-        </div>
-    </header>
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item active" data-tab="summary">{{localize 'RQG.Summary'}}</a>
         <a class="item" data-tab="skills">{{localize 'RQG.Skills'}}</a>
+        <a class="item" data-tab="herosoul">{{localize 'RQG.HEROSOUL'}}</a>
         <a class="item" data-tab="attributes">{{localize 'RQG.Characteristics'}}</a>
         <a class="item" data-tab="combat">{{localize 'RQG.Combat'}}</a>
         <a class="item" data-tab="magic">{{localize 'RQG.Magic'}}</a>
@@ -91,96 +23,11 @@
         </div> 
         {{!-- Magic Tab --}}
         <div  class="tab magic"  data-group="primary"  data-tab="magic">
-            {{!-- Spirit Spells --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-spelltype="spirit">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize 'RQG.SpiritSpell'}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="spiritspell"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.spells.spirit as |spell id|}}
-                        <li class="item flexrow" data-item-id="{{spell._id}}" data-spellname="{{spell.name}}">
-                            <h4 class="item-name"><a class="spiritspell-roll">{{spell.name}}</a></h4>
-                            <h4 class="item-name"><a class="spiritspell-roll">{{spell.data.mpcost}}</a></h4>
-                            <input class="experiencecheck" type="checkbox" name="spell.flags.dynamiceffects.alwaysActive" {{checked spell.flags.dynamiceffects.alwaysActive}}/>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- Cults --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-type="cult">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize 'RQG.Cult'}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="cult"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.cults as |cult id|}}
-                        <li class="item flexrow" data-item-id="{{cult._id}}" data-cultname="{{cult.name}}">
-                            <h4 class="item-name">{{cult.name}}</h4>
-                            <h4 class="item-name">{{cult.data.rank}}</h4>
-                            <h4 class="item-name">{{cult.data.subcult}}</h4>
-                            <h4 class="item-name">{{cult.data.currentrunepoint}} / {{cult.data.maxrunepoint}}</h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- Rune Spells --}}
-            <ol class="skills-list">          
-                <div class="skill-category" data-spelltype="rune">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{localize 'RQG.RuneSpell'}}</div>
-                        <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="runespell"><i class="fas fa-plus"></i></a>
-                        </div>
-                    </li>
-                    {{#each actor.spells.rune as |spell id|}}
-                        <li class="item flexrow" data-item-id="{{spell._id}}" data-spellname="{{spell.name}}" data-rune="{{spell.data.rune}}">
-                            <h4 class="item-name"><a class="runespell-roll">{{spell.name}}</a></h4>
-                            <h4 class="item-name"><a class="runespell-roll">{{spell.data.points}}</a></h4>
-                            <h4 class="item-name"><a class="runespell-roll"><span class="runefont">{{getruneletter spell.data.rune}}</span></a></h4>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                    {{/each}}
-                </div>
-            </ol>
-            {{!-- MP Storage --}}
-            <div class="summary-hitlocations-list">
-                <table style="height: 70px;" border="2">
-                <thead style="height: 28px;">
-                    <th style="width: 25%; text-align: center; height: 28px;">{{localize "RQG.NAME"}}</th>
-                    <th style="width: 15%; text-align: center; height: 28px;">{{localize "RQG.CURRENTMP"}}</th>
-                    <th style="width: 15%; text-align: center; height: 28px;">{{localize "RQG.MAXMP"}}</th>
-                    <th style="width: 10%; text-align: center; height: 28px;">{{localize "RQG.EQUIPED"}}</th>
-                    <th style="width: 10%; text-align: center; height: 28px;"><a class="item-control item-create" title="Create item" data-type="mpstorage"><i class="fas fa-plus"></i></a></th>
-                </thead>
-                <tbody>
-                {{#each actor.mpstorage as |storage id|}}
-                    <tr style="height: 28px;">
-                    <td style="width: 25%; height: 28px; text-align: center;">{{localize storage.name}}</td>
-                    <td style="width: 15%; height: 28px; text-align: center;"><input id="{{id}}_{{storage._id}}_currentmp_mpstorage" type="text" name="storage.data.currentmp" value="{{storage.data.currentmp}}"/></td>
-                    <td style="width: 15%; height: 28px; text-align: center;">{{storage.data.maxmp}}</td>
-                    <td style="width: 10%; text-align: center;">{{storage.data.equiped}}</td>
-                    </tr>        
-                {{/each}}
-                </tbody>
-                </table>
-            </div>
+            {{> "systems/runequest/templates/actor/parts/actor-magic.html"}}
         </div>
+        <div  class="tab summary"  data-group="primary"  data-tab="herosoul">
+            {{> "systems/runequest/templates/actor/parts/actor-herosoul.html"}}
+        </div>         
         {{!-- Combat Tab --}}
         <div  class="tab combat"  data-group="primary"  data-tab="combat">
             {{> "systems/runequest/templates/actor/parts/actor-combat.html"}}
