--- a/templates/actor/parts/actor-combat.html
+++ b/templates/actor/parts/actor-combat.html
@@ -38,13 +38,15 @@
         <li class="item flexrow item-header">
             <div class="item-name">{{localize "RQG.MeleeAttacks"}}</div>
             <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="meleeattack"><i class="fas fa-plus"></i></a>
+                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
+        {{log "trying to display config"}}
+        {{log config}}
         {{#each actor.attacks.melee as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                <h4 class="item-name"><a class="meleeattack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.skillused}}</h4>
+                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
+                <h4 class="item-name">{{log lookup config.weaponskills [attack.data.skillused]}}</h4>
                 <label class="skill-value">{{attack.data.modifier}}</label>
                 <h4 class="item-name">{{attack.data.damage}}</h4>
                 <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
@@ -62,12 +64,12 @@
         <li class="item flexrow item-header">
             <div class="item-name">{{localize "RQG.MissileAttacks"}}</div>
             <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="missileattack"><i class="fas fa-plus"></i></a>
+                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
         {{#each actor.attacks.missile as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="missileweapons">
-                <h4 class="item-name"><a class="missileattack-roll">{{attack.name}}</a></h4>
+                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
                 <h4 class="item-name">{{attack.data.skillused}}</h4>
                 <label class="skill-value">{{attack.data.modifier}}</label>
                 <h4 class="item-name">{{attack.data.damage}}</h4>
@@ -86,12 +88,12 @@
         <li class="item flexrow item-header">
             <div class="item-name">{{localize "RQG.NaturalAttacks"}}</div>
             <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="naturalattack"><i class="fas fa-plus"></i></a>
+                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
         {{#each actor.attacks.natural as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                <h4 class="item-name"><a class="naturalattack-roll">{{attack.name}}</a></h4>
+                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
                 <h4 class="item-name">{{attack.data.skillused}}</h4>
                 <label class="skill-value">{{attack.data.modifier}}</label>
                 <h4 class="item-name">{{attack.data.damage}}</h4>
