--- a/templates/chat/skill-dialog.html
+++ b/templates/chat/skill-dialog.html
@@ -8,7 +8,7 @@
     <input readonly type="text" name="skillvalue" value="{{skillvalue}}" />
   </div>
   <div class="form-group">
-    <label>{{localize "RQG.Skillvalue"}}</label>
+    <label>{{localize "RQG.Catmodifier"}}</label>
     <input readonly type="text" name="catmodifier" value="{{catmodifier}}" />
   </div>
   <div class="form-group">
